--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -76,6 +76,7 @@ table {
 }
 /* end of CSS Reset */
 
+/* some basic styles */
 h1, h2, h3, h4 {
     padding: 0.2em;
 }
@@ -87,21 +88,52 @@ h2 {
 }
 h3 {
     font-size: 1.2em;
+    font-family: Arial, sans-serif;
 }
 h4 {
     font-size: 1.1em;
 }
 a {
     color: #2229ff;
+    text-decoration: none;
 }
+a:hover {
+    text-decoration: underline;
+}
+
+/* page layout */
 header {
     width: 100%;
     height: 3.5em;
     z-index: 100;
 }
+header .title {
+    font: 2em/2em sans-serif;
+    color: #189cc4;
+    padding: 0 .6em;
+}
 div.body {
     width: 100%;
     padding: 0.5em;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+div.sidebar {
+    width: 10em;
+}
+div.sidebar, div.contents {
+    display: inline-block;
+    vertical-align: top;
+}
+div.sidebar .section {
+    margin: .2em 0 .8em;
+}
+div.sidebar .indent {
+    margin-left: .5em;
+}
+div.sidebar button {
+    margin: .5em 0 .2em;
 }
 footer {
     padding: .2em .4em;
@@ -112,12 +144,7 @@ footer {
     margin-bottom: .3em;
 }
 
-.dataset .settings {
-    margin-left: .3em;
-    margin-bottom: .5em;
-    font-size: 1.05em;
-}
-
+/* menu */
 #menu-icon {
     display: none;
     width: 1em;
@@ -208,23 +235,38 @@ nav.menu li.master a:hover, nav.menu li.master a:active {
     nav.menu li a {
         width: 100%;
         padding: .3em .9em;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
     }
     nav.menu li.master {
         margin-left: 0;
     }
 }
 
+/* misc */
 .esc-separator {
     background-color: #d6d6d6;
     border-style: none;
     font-size: 0;
     height: 1px;
     margin: -1px 0;
-    opacity: 0;
     position: relative;
+}
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+.dataset .settings {
+    margin-left: .3em;
+    margin-bottom: .5em;
+    font-size: 1.05em;
+}
+.filters select {
+    width: 9.5em;
 }
 
 table.key_value td {
@@ -257,11 +299,4 @@ div.logs div.log_body {
     background: pink;
     padding: 10px;
     margin: 5px 5px 5px 20px;
-}
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
 }
