make it easier to get to the drop-down menu using the mouse in responsive mode.

--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -225,6 +225,10 @@ nav.menu li.master a:hover, nav.menu li.master a:active {
     #menu-icon {
         display: inline-block;
     }
+    nav.menu:hover, nav.menu:active {
+        margin: 0;
+        padding: 1em;
+    }
     nav.menu ul, nav.menu:active ul {
         display: none;
         position: absolute;
