--- a/iceprod/server/data/www/documentation.css
+++ b/iceprod/server/data/www/documentation.css
@@ -6,13 +6,13 @@
     width:100%;
     height:100%;
     background:#000;
-    opacity:0.2;
+    opacity:0.4;
     z-index:99999;
 }
 
 #popup {
     display:none;
-    position:absolute;
+    position:fixed;
     left:50%;
     width:600px;
     top:0;
@@ -24,4 +24,17 @@
     z-index:100000;
     padding: 10px;
     box-shadow: 5px 5px 10px #888888;
+}
+#popup h1, #popup h2, #popup h3 {
+    font-weight: bold;
+}
+#popup p {
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+#popup li {
+    margin-left: 15px;
+}
+a.header.key {
+    color: black;
 }
