Add config string to site page

--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -351,3 +351,6 @@ body {
     margin: 20px auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
+.code {
+     white-space: pre; font-family: monospace;
+}
