--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -121,6 +121,7 @@ header a:hover
 }
 
 div.body {
+    min-height: 400px;
     width: 100%;
     padding: 0.5em;
     -webkit-box-sizing: border-box;
