--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -27,7 +27,7 @@ off-white green: #f6fffd
 */
 
 /* CSS Reset
-   http://meyerweb.com/eric/tools/css/reset/ 
+   http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -40,8 +40,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0;
@@ -52,7 +52,7 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
@@ -354,4 +354,21 @@ div.logs div.log_body {
 {
     color: #fff;
     background-color: #aaa
+}
+
+.task_completion table, .task_completion tr
+{
+    border: 1px solid #777;
+}
+.task_completion th, .task_completion td
+{
+    padding: 5px 10px;
+}
+.task_completion th
+{
+    font-weight: bold;
+}
+.task_completion
+{
+    margin-top: 15px
 }
