forgot the conversion from seconds to hours

--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -376,3 +376,6 @@ div.logs div.log_body {
 .task_completion td:first-child {
     text-align: left;
 }
+.task_completion td:last-child {
+    text-align: right;
+}
