--- a/iceprod/server/data/www/submit.css
+++ b/iceprod/server/data/www/submit.css
@@ -226,11 +226,39 @@ form
 #submit_area
 {
     background-color: #dddfe5;
-    padding: 10px;
     border-radius: 5px;
 
     background: #dddfe5; /* Old browsers */
     background: -moz-linear-gradient(-45deg, #dddfe5 0%, #c3cadd 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #dddfe5 0%,#c3cadd 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg, #dddfe5 0%,#c3cadd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+#submit_area .submit_contents
+{
+    padding: 10px;
+}
+
+.tab_bar
+{
+    border-radius: 5px 5px 0 0;
+    background-color: rgba(0, 0, 0, .1);
+}
+.tab_bar li
+{
+    display: inline;
+}
+#submit_area .tab_bar button
+{
+    border-radius: 0;
+    background: none;
+    margin: 0;
+    padding: 10px;
+}
+#submit_area .tab_bar li:first-child button
+{
+    border-radius: 5px 0 0 0;
+}
+#submit_area .tab_bar button.active
+{
+    background-color: #dddfe5;
 }
