--- a/iceprod/server/data/www/submit.css
+++ b/iceprod/server/data/www/submit.css
@@ -214,7 +214,12 @@ span.hide {
     margin: .5em auto;
     display: block;
 }
-#submit_area select
+#submit_area #number_jobs,
+#submit_area #group
+{
+    margin-right: 3em;
+}
+#submit_area #group
 {
     font-size: 13px;
     background-color: #fff;
@@ -223,7 +228,6 @@ span.hide {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    margin-left: 40px;
 }
 form
 {
