get the reset, resume, suspend buttons working. fix a few more web templates

--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -407,3 +407,10 @@ div.action {
 div.action button {
     margin: .1em .5em;
 }
+
+button.set_status {
+    border: none;
+    background: none;
+    color: #2229ff;
+    cursor: pointer;
+}
