--- a/iceprod/server/data/www/base.css
+++ b/iceprod/server/data/www/base.css
@@ -312,7 +312,7 @@ table.browse th, table.browse td {
     justify-content: space-between;
     gap: .2em 2em;
 }
-.dataset .browse .entry .header > span {
+.dataset .browse .entry .header > div {
     min-width: 8em;
 }
 .dataset .browse .entry .header > div:first-child {
